# MUI

./: config.h  mui.h  uniface.h
spatial_samplers/: sampler_mov_avg.h  sampler_nn.h
wrappers/C/: CMakeLists.txt  mui_1d.cpp  mui_1d.h  mui_2d.cpp  mui_2d.h  mui_3d.cpp  mui_3d.h
